gl31-master/src/test/deca/syntax/valid/hellotest/prog_braces_vide.deca
// Description:
//    tests de programme correct syntaxiquement pour hello-world
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 08/01/2021
{
}